--- a/config.yml
+++ b/config.yml
@@ -43,7 +43,7 @@
 
 # What is your status page called?
 # Shows up in the browser bar and meta tags
-title: Eggsample Status
+title: OverclockHost Network Status
 
 # Should posts, which have a publish date
 # from the future, be built? Useful for
@@ -121,12 +121,12 @@ params:
   # For help, see the wiki:
   # https://github.com/cstate/cstate/wiki/Customization
   categories:
-    - name: North Coast
-      description: The main servers are located here.
-      closed: true
-    - name: East Coast      
-    - name: Uncategorized
-      untitled: true
+    - name: "Filtering: North American Anycast"
+      description: North American Filtering Servers
+      closed: false
+    - name: "Filtering: European Anycast"
+      description: European & UK Filtering Servers
+      closed: false
 
   # These are your systems. Change them to
   # change the amount of components.
@@ -134,17 +134,28 @@ params:
   # For help, see the wiki:
   # https://github.com/cstate/cstate/wiki/Customization
   systems:
-    - name: Gateway
-      category: North Coast
-    - name: Backup Gateway
-      category: East Coast
-    - name: API
-      description: The guts of the application.
-      category: Uncategorized
-    - name: Media Proxy
-      description: This is the service responsible for serving images, audio, and video. It is reliant on our CDN.
-      category: Uncategorized
+    # North America
+    - name: LAX1
+      description: "Los Angeles 1"
+      category: "Filtering: North American Anycast"
+    - name: DAL1
+      description: "Dallas 1"
+      category: "Filtering: North American Anycast"
+    - name: ASH1
+      description: "Ashburn 1"
+      category: "Filtering: North American Anycast"
+    - name: MIM1
+      description: "Miami 1"
+      category: "Filtering: North American Anycast"
 
+    # Europe
+    - name: AMS1
+      description: "Amsterdam 1"
+      category: "Filtering: European Anycast"
+    - name: LON1
+      description: "London 1"
+      category: "Filtering: European Anycast"
+      
   # What date format to use?
   #
   # Hugo formatting docs:
@@ -171,18 +182,6 @@ params:
   # Default: `yearly`
   # STRING; `monthly`, `yearly`, `none`
   incidentHistoryFormat: "yearly"
-
-  # Should incident history be hidden?
-  #
-  # By disabling the incident history, you also disable
-  # the RSS feed. To ensure no incidents are shown, you
-  # should delete them after they are resolved. This option
-  # overrides any other options that tailor your incident
-  # history’s look.
-  #
-  # Default: `false`
-  # BOOLEAN; `true`, `false`
-  disableIncidentHistory: false
 
   # Disable dark mode
   #
@@ -214,13 +213,13 @@ params:
   #
   # Recommended: png, bmp, jpg, or gif
   # for best browser support!
-  logo: logo.png
+  logo: /logo.svg
 
   # This is the description that is shown
   # on the footer and meta tags.
   #
   # Default: We continuously monitor the status of our services and if there are any interruptions, a note will be posted here.
-  description: We continuously monitor the status of our services and if there are any interruptions, a note will be posted here.
+  description: We continuously monitor the status of our services and if there are any interruptions, a note will be posted here. The information here is the result of Automated and Manual input.
 
   # Tabs on homepage
   # Uncomment to enable.
