--- a/config.yml
+++ b/config.yml
@@ -213,7 +213,7 @@ params:
   #
   # Recommended: png, bmp, jpg, or gif
   # for best browser support!
-  logo: /logo.svg
+  logo: /logo2.svg
 
   # This is the description that is shown
   # on the footer and meta tags.
