--- a/config.yml
+++ b/config.yml
@@ -135,25 +135,25 @@ params:
   # https://github.com/cstate/cstate/wiki/Customization
   systems:
     # North America
-    - name: LAX1
-      description: "Los Angeles 1"
+    - name: Los Angeles
+      description: "LAX1"
       category: "Filtering: North American Anycast"
-    - name: DAL1
-      description: "Dallas 1"
+    - name: DAllas
+      description: "DAL1"
       category: "Filtering: North American Anycast"
-    - name: ASH1
-      description: "Ashburn 1"
+    - name: Ashburn
+      description: "ASH1"
       category: "Filtering: North American Anycast"
-    - name: MIM1
-      description: "Miami 1"
+    - name: Miami
+      description: "MIM1"
       category: "Filtering: North American Anycast"
 
     # Europe
-    - name: AMS1
-      description: "Amsterdam 1"
+    - name: Amsterdam
+      description: "AMS1"
       category: "Filtering: European Anycast"
-    - name: LON1
-      description: "London 1"
+    - name: London
+      description: "LON1"
       category: "Filtering: European Anycast"
       
   # What date format to use?
@@ -203,7 +203,7 @@ params:
   #
   # Default: false
   # BOOLEAN; `true`, `false`
-  useLogo: false
+  useLogo: true
 
   # Where is the logo located, if one is
   # present at all?
@@ -260,7 +260,7 @@ params:
   # disrupted: "#cc4400"
   # down: "#e60000"
   # notice: "#24478f"
-  brand: "#e81313"
+  brand: "#000000"
   ok: "#008000"
   disrupted: "#cc4400"
   down: "#e60000"
