--- a/config.yml
+++ b/config.yml
@@ -260,7 +260,7 @@ params:
   # disrupted: "#cc4400"
   # down: "#e60000"
   # notice: "#24478f"
-  brand: "#000000"
+  brand: "#f79797"
   ok: "#008000"
   disrupted: "#cc4400"
   down: "#e60000"
